src/test/ui/phantom-oibit.stderr
error[E0277]: `T` cannot be shared between threads safely
  --> $DIR/phantom-oibit.rs:21:12
   |
LL | fn is_zen<T: Zen>(_: T) {}
   |    ------    --- required by this bound in `is_zen`
...
LL |     is_zen(x)
   |            ^ `T` cannot be shared between threads safely
   |
   = help: the trait `std::marker::Sync` is not implemented for `T`
help: consider restricting this type parameter with `T: std::marker::Sync`
  --> $DIR/phantom-oibit.rs:20:13
   |
LL | fn not_sync<T>(x: Guard<T>) {
   |             ^
   = note: required because of the requirements on the impl of `Zen` for `&T`
   = note: required because it appears within the type `std::marker::PhantomData<&T>`
   = note: required because it appears within the type `Guard<'_, T>`

error[E0277]: `T` cannot be shared between threads safely
  --> $DIR/phantom-oibit.rs:26:12
   |
LL | fn is_zen<T: Zen>(_: T) {}
   |    ------    --- required by this bound in `is_zen`
...
LL |     is_zen(x)
   |            ^ `T` cannot be shared between threads safely
   |
   = help: the trait `std::marker::Sync` is not implemented for `T`
help: consider restricting this type parameter with `T: std::marker::Sync`
  --> $DIR/phantom-oibit.rs:25:20
   |
LL | fn nested_not_sync<T>(x: Nested<Guard<T>>) {
   |                    ^
   = note: required because of the requirements on the impl of `Zen` for `&T`
   = note: required because it appears within the type `std::marker::PhantomData<&T>`
   = note: required because it appears within the type `Guard<'_, T>`
   = note: required because it appears within the type `Nested<Guard<'_, T>>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
